<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightAmber"
    tools:context="com.example.android.musicalstructureproject.NowPlayingActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:id="@+id/linearlayout_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_now_playing_navigation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/now_playing" />

            <TextView
                android:id="@+id/textview_song_details_navigation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darkTeal"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/song_details" />

            <TextView
                android:id="@+id/textview_song_library_navigation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/teal"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/song_library" />

        </LinearLayout>

        <Button
            android:id="@+id/button_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/linearlayout_navigation"
            android:text="Explanation" />

        <TextView
            android:id="@+id/song_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearlayout_navigation"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/song_title_here"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/album_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/song_title_textview"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/album_title_here"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/album_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/music_timeframe_linearlayout"
            android:layout_below="@id/album_textview"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/fake_album_cover" />

        <LinearLayout
            android:id="@+id/music_controls_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/backward" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forward" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/music_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/music_controls_linearlayout"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp" />

        <LinearLayout
            android:id="@+id/music_timeframe_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/music_seekbar"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward_slash" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_00" />
        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
