<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightAmber"
    tools:context="com.example.android.musicalstructureproject.MainActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <Button
            android:id="@+id/button_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Explanation" />

        <TextView
            android:id="@+id/now_playing_textview"
            style="@style/CategoryTextView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/red"
            android:text="@string/now_playing" />

        <TextView
            android:id="@+id/song_details_textview"
            style="@style/CategoryTextView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/now_playing_textview"
            android:background="@color/darkTeal"
            android:text="@string/song_details" />

        <TextView
            android:id="@+id/song_library_textview"
            style="@style/CategoryTextView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/song_details_textview"
            android:background="@color/teal"
            android:text="@string/song_library" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
